Update java version.